<resources>
    <string name="app_name">CreativeBaz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Perfil</string>
    <string name="slogan">Tu arte al alcance de tus manos</string>
    <string name="catpop">Categorías populares</string>
    <string name="read_storage_permission_denied">No tienes permiso para entrar a la memoria del equipo</string>

    <string-array name="categorias">
        <item>Artesanías</item>
        <item>Ropa</item>
        <item>Decoración</item>
        <item>Pintura</item>
        <item>Escultura</item>
        <item>Joyería</item>
        <item>Otro</item>
    </string-array>

    <string name="name">Nombre</string>
    <string name="lname">Apellido</string>
    <string name="mail">Correo</string>
    <string name="address">Dirección</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login">Ingresar</string>
    <string name="logout">Salir</string>
    <string name="loginRegister"> Ya  tienes  cuenta?  Ingresa aquí</string>
    <string name="registerLogin">No tienes cuenta? Crea una aquí</string>
    <string name="profession">Profesión</string>
    <string name="profile_pic_desc">Profile Pic</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo pulvinar metus at pharetra. Nullam facilisis lacus id ante placerat, eget pellentesque quam ullamcorper. Praesent cursus ornare nisi, ut consequat ipsum porta ut. Donec nec metus vel eros ultricies sodales. Aenean ullamcorper diam ac arcu rutrum, sit amet luctus lacus.</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="bio_hint">Escribe a detalle tu biografía :)</string>
    <string name="acept">Aceptar</string>
    <string name="contact_example">Ej: https://www.facebook.com/john.doe/</string>
    <string name="phoneNumber">55 1234 5678</string>
    <string name="bio_empty">¡Edita tu perfil para agregar información de ti como creador y la gente te conozca!</string>
    <string name="err_msg_enter_first_name">Ingrese nombre</string>
    <string name="err_msg_enter_email">Ingrese correo</string>
    <string name="err_msg_enter_password">Ingrese contraseña</string>
    <string name="please_wait">Por favor espere</string>
    <string name="register_success">¡Has sido registrado!</string>
    <string name="image_selection_failed">La selección de imagen falló.</string>
    <string name="err_msg_enter_mobile">Ingrese su número</string>
    <string name="err_msg_enter_profession">Ingrese su profesion</string>
    <string name="msg_profile_update_success">Su perfil fue actualizado exitosamente</string>

    <string-array name="professions">
        <item>Creador</item>
        <item>Artesan@</item>
        <item>Artísta</item>
        <item>Escultor(a)</item>
        <item>Joyer@</item>
        <item>Pintor(a)</item>
    </string-array>
    <!--<string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_products">Mis Productos</string>
    <string name="title_dashboard">Inicio</string>
    <string name="title_orders">Órdenes</string>
    <string name="please_click_back_again_to_exit">Por favor, da click dos veces para salir</string>
    <string name="action_settings">Configuración</string>

    <string name="title_settings">Configuración</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_addresses">Direcciones</string>
    <string name="btn_lbl_logout">Cerrar Sesión</string>
    <string name="title_complete_profile">Acabe de personalizar su perfil</string>
    <string name="title_edit_profile">Editar Perfil</string>
    <string name="action_add_product">Añadir producto</string>

    <string name="title_add_product">Añadir Producto</string>
    <string name="hint_product_title">Nombre del producto</string>
    <string name="hint_product_price">Precio del producto</string>
    <string name="hint_product_description">Descripción del producto</string>
    <string name="hint_product_quantity">Cantidad del producto</string>
    <string name="content_description">Product Image</string>
    <string name="btn_lbl_submit">Subir Producto</string>
    <string name="hint_product_category">Categoría del producto</string>
    <string name="err_msg_select_product_image">Por favor selecciona una imagen del producto</string>
    <string name="err_msg_select_product_title">Por favor dale un titulo a tu obra</string>
    <string name="err_msg_select_product_price">Por favor elige un precio</string>
    <string name="err_msg_select_product_quantity">Por favor pon la cantidad de productos que tienes</string>
    <string name="err_msg_select_product_category">Por favor elije una categoría</string>
    <string name="product_upload_success_message">Tu producto se ha agregado exitosamente</string>
    <string name="no_products_added_yet">Aún no hay productos agregados</string>
    <string name="no_dashboard_item_found">No se encontraron productos!</string>
    <string name="product_delete_success_message">Producto eliminado exitosamente</string>
    <string name="delete_dialog_title">Eliminar</string>
    <string name="delete_dialog_message">Seguro que quieres borrar el producto?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>


    <string name="title_product_details">Detalles del producto</string>
    <string name="lbl_product_description">Descripción del producto</string>
    <string name="lbl_product_details_stock_quantity">Cantidad en venta</string>

    <string name="btn_lbl_add_to_cart">Agregar al carrito</string>
    <string name="success_message_item_added_to_cart">El producto se ha agregado al carrito</string>
    <string name="btn_go_to_cart">Ir al carrito</string>


    <string name="title_my_cart">Mi Carrito</string>
    <string name="no_cart_item_found">El producto no se encontró en el carrito!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Cargo por envío</string>
    <string name="lbl_total_amount">Total</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">Mi Carrito</string>

    <string name="lbl_out_of_stock">Existencias agotadas</string>
    <string name="msg_item_removed_successfully">Producto eliminado exitosamente.</string>

    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="title_address_list">Lista de Direcciones</string>
    <string name="no_address_found">Sin Direciones!</string>
    <string name="lbL_add_address">Añadir dirección</string>

    <string name="title_add_address">AÑADIR DIRECCIÓN</string>
    <string name="hint_full_name">Nombre</string>
    <string name="hint_phone_number">Celular</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_zip_code">Código postal</string>
    <string name="hint_additional_note">Notas adicionales</string>
    <string name="hint_other_details">Otros detalles</string>
    <string name="lbl_home">CASA</string>
    <string name="lbl_office">OFICIA</string>
    <string name="lbl_other">OTRO</string>


    <string name="err_msg_please_enter_full_name">Por favor ingrese nombre completo.</string>
    <string name="err_msg_please_enter_phone_number"> Por favor ingrese su número telefónico.</string>
    <string name="err_msg_please_enter_address">Ingrese una dirección</string>
    <string name="err_msg_please_enter_zip_code">Ingrese un código postal.</string>
    <string name="err_msg_please_enter_other_details">Ingrese más detalles.</string>

    <string name="err_your_address_added_successfully">Su dirección ha sido añadida exitosamente.</string>

    <string name="title_edit_address">EDITAR DIRECCIÓN</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">SELECCIONAR DIRECCIÓN</string>

    <string name="title_checkout">PAGAR</string>
    <string name="checkout_lbl_product_items">Artículos</string>
    <string name="checkout_lbl_selected_address">Dirección seleccionada</string>
    <string name="checkout_lbl_items_receipt">Artículos de pago</string>
    <string name="lbl_payment_mode">Método de pago</string>
    <string name="lbl_cash_on_delivery">Efectivo en llegada</string>
    <string name="btn_lbl_place_order">Encagar</string>

    <string name="no_orders_placed_yet">Sin ordenes</string>

    <string name="title_my_order_details">Detalles de mi orden</string>
    <string name="order_details_lbl">Detalles de la orden</string>
    <string name="order_details_lbl_order_id">ID de la orden</string>
    <string name="order_details_lbl_order_date">Fecha de la orden</string>
    <string name="order_details_lbl_order_status">Estatus de la orden</string>
    <string name="order_status_pending">Pendiente</string>
    <string name="order_details_lbl_shipping_address">Dirección de envio</string>

    <string name="order_status_in_process">En proceso</string>
    <string name="order_status_delivered">Entregado</string>

    <string name="title_sold_products">Productos vendidios</string>
    <string name="no_products_sold_out_yet">Sin productos vacios todavía</string>

    <string name="title_sold_product_details">Detalles de producto vendido</string>

</resources>