<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="24dp"
                android:hint="@string/mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/edit_mobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.416"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/fl_user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="251dp"
                android:layout_height="51dp"
                android:layout_marginHorizontal="30sp"
                android:text="@string/acept"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="20dp"
                android:hint="@string/profession"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/save_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="24dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/edit_mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_user_image" />

            <EditText
                android:id="@+id/edit_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="24dp"
                android:hint="Celular"
                android:importantForAutofill="no"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/edit_bio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_bio"
                android:layout_width="353dp"
                android:layout_height="108dp"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="24dp"
                android:hint="@string/bio_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@id/edit_profession"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_marginTop="@dimen/profile_user_image_marginTop"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/edit_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_person_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background" />

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>